# CUDA_work

./: CMakeLists.txt  Makefile  README.md
gemm/: m_gemm.cu  result  result.exp  result.lib
op/gemm/: CMakeLists.txt  m_gemm.cu  result
op/mha/: CMakeLists.txt  m_mha.cu
op/reduce/: CMakeLists.txt  m_reduce.cu  result
op/relu/: CMakeLists.txt  m_relu.cu
op/rmsnorm/: CMakeLists.txt  m_rmsnorm.cu  rms
op/softmax/: CMakeLists.txt  m_softmax.cu
reduce/: m_reduce.cu
test/: app.exp  app.lib  test.cu
